assets/css/main.css
/* ... */
@-moz-keyframes dropin {
	from 	{ margin-top: -800px; }
	90% 	{ margin-top: 10px; }
	to  	{ margin-top: 0; }
}
@keyframes dropin {
	from 	{ margin-top: -800px; }
	90% 	{ margin-top: 10px; }
	to  	{ margin-top: 0; }
}

@-webkit-keyframes slidein {
	from 	{ margin-left: -800px; }
	to  	{ margin-left: 0; }
}
@-moz-keyframes slidein {
	from 	{ margin-left: -800px; }
	to  	{ margin-left: 0; }
}
@keyframes slidein {
	from 	{ margin-left: -800px; }
	to  	{ margin-left: 0; }
}

body {
	font-family: 'Droid Serif', Georgia, serif;
	font-size: 16px;
	margin: 0;
	padding: 0;
	color: #333;
	background: #fbfbfb url(../img/texture-white.jpg) fixed;
}

.container {
	padding: 0;
	margin: 10px 20px;
}

ul#posts {
	margin: 0;
}

.clear {
	clear: both;
}

a {
	color: #000;
	text-decoration: none;
	-webkit-transition: all 0.2s ease-in-out;
	-moz-transition: all 0.2s ease-in-out;
	-o-transition: all 0.2s ease-in-out;
	transition: all 0.2s ease-in-out;
}

a:hover {
	color: #333;
}

p a,
.archivelist a,
.home #content a,
ol a,
ul a,
h1 a,
h2 a
{
	border-bottom: 1px solid #03b4d1;
}

p a:hover,
.archivelist a:hover,
.archivelist a:visited,
.home #content a:hover,
ol a:hover,
ul a:hover,
h1 a:hover,
h2 a:hover
{
	border-bottom: 1px solid #dadada;
}

.linktitle a {
	border-bottom: 2px solid #03b4d1;
	line-height: 1.6em;
}

.linktitle a:hover {
	border-bottom: 2px solid #dadada;
}

.posttitle a, .postitle a:hover, .sitetitle a, ul#pagenav li a, .pagination a {
	border: none !important;
}

.pagination a:hover {
	color: #999;
}

a[rev=footnote], sup a {
	color: #03b4d1;
	border: none;
}

.infin {
	color: #03b4d1;
	font-family: sans-serif;
	border: none !important;
	margin-left: 5px;
}

img {
	max-width: 100%;
	height: auto;
}

code {
	white-space: pre-wrap; /* css-3 */
	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
	white-space: -pre-wrap; /* Opera 4-6 */
	white-space: -o-pre-wrap; /* Opera 7 */
	word-wrap: break-word; /* Internet Explorer 5.5+ */
	background: #f3f3f3;
	border: 1px solid #e0e0e0;
	font-size: 0.9em;
	padding: 2px 6px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	font-family: "source-code-pro", monospace;
}

pre {
	-moz-tab-size: 2;
	-o-tab-size: 2;
	tab-size: 2;
}

pre code {
	display: block;
	padding: 10px 20px;
}

blockquote {
	border-left: 7px solid #03b4d1;
	padding-left: 14px;
	margin: 0;
}

.tweet {
	text-align: center;
}

ul.archivenav {
	padding-left: 0;
	list-style: none;
	margin-bottom: 30px;
	border-bottom: 1px solid #dadada;
	padding-bottom: 5px;
}

ul.archivenav li {
	margin-right: 20px;
	display: inline;
}

ul.archivenav li.selected {
	border-bottom: 3px solid #333;
	padding-bottom: 5px;
}

.googlesearch {
	display: none;
}

fieldset {
	display: inline;
	border: none;
	padding: 0;
}

.post ul li {
 	list-style-type: disc;
 }

.post img {
	padding: 8px;
	border: 1px solid #DBDBDB !important;
	background: #E9E9E9;
	border-radius: 6px;
	width: 640px;
}

.footnotes {
 	font-size: 16px;
	line-height: 1.6em;
}

.footnotes p {
	display: inline;
}

.footnotes hr {
	border: none;
	height: 1px;
	background: #dadada;
}

sup a[rel="footnote"] {
	padding: 0 1px;
}

#posts, .archivelist, #pagenav {
	list-style: none;
	padding-left: 0;
}

#archive h2, .home #content h2, .projects #content h2 {
	font-size: 20px;
	margin-bottom: 0;
}

.home .posttitle {
	display: none;
}

.home #content p:first-of-type {
	margin-top: 0;
}

#archive .archivelist {
	margin-top: 5px;
}

#masthead {
	padding: 15px 0;
	background: #0297af url(../img/texture.jpg) fixed;
	color: #fff;
}

.js #masthead {
	position: fixed;
	width: 100%;
	top: 0;
	left: 0;
	z-index: 1000;
	max-height: 100%;
	overflow: auto;
}

.js body {
	margin-top: 50px;
}

#masthead hr {
	display: none;
}

#masthead img {
	display: none;
}

#content {
	padding-top: 30px;
}

ul#pagenav {
	padding: 0 20px;
}

.js ul#pagenav {
	display: none;
	margin-top: 15px;
}

.menubutton {
	position: absolute;
	top: 10px;
	right: 15px;
	background: rgba(255,255,255,0);
	padding: 2px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	z-index: 1000;
	-webkit-animation-name: dropin;
	-webkit-animation-duration: 1.8s;
	-webkit-animation-iteration-count: 1;
	-webkit-animation-timing-function: ease-in-out;
	-moz-animation-name: dropin;
	-moz-animation-duration: 1.8s;
	-moz-animation-iteration-count: 1;
	-moz-animation-timing-function: ease-in-out;
	animation-name: dropin;
	animation-duration: 1.8s;
	animation-iteration-count: 1;
	animation-timing-function: ease-in-out;
}

.menubutton span {
	width: 30px;
	height: 5px;
	margin: 4px;
	display: block;
	background: #fff;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}

ul#pagenav li a {
	display: block;
	padding: 8px 0;
	border-bottom: 1px solid #fff;
	border-bottom: 1px solid rgba(255,255,255,0.2);
	background: url('../img/chevron.png') no-repeat right center;
	color: #fff;
}

ul#pagenav li a.rss {
	background: url('../img/rss.png') no-repeat right center;
}

ul#pagenav li a.twitter {
	background: url('../img/twitter.png') no-repeat right center;
}

ul#pagenav li a.adn {
	background: url('../img/adn.png') no-repeat right center;
}

/* Social */

.social-links {
  width: 210px;
  height: 34px;
  display: block;
  margin: 0 auto 35px;
  padding: 0;
  list-style: none;
}

.social-links li {
  float: left;
  /*-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	-o-transition: all 0.5s ease;
	transition: all 0.5s ease;*/
}

.social-links li a {
  display: block;
  width: 34px;
  height: 34px;
  outline: none;
  margin: 0 4px;
  background: transparent url(../img/social-links.png) no-repeat;
  text-indent: -9000px;
  position: relative;
  border: none;
}

.social-links li:nth-child(2n+2):hover {
	-webkit-transform: rotate(5deg);
	-moz-transform: rotate(5deg);
	-o-transform: rotate(5deg);
	transform: rotate(5deg);
}
/* ... */

